--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bhakti Solar Energy - Renewable Energy </title>
+    <title>Pragati EcoSolar - Renewable Energy </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -48,7 +48,7 @@
             <div class="col-lg-7 px-5 text-start">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-map-marker-alt text-primary me-2"></small>
-                    <small>Room no-4, Bijupattnaik Commercial Complex, Damana Square, Chandrasekharpur ,Bhubaneswar, Odisha, India - 751016</small>
+                    <small>HIG/42, Aryapalli, Patia, Bhubaneswar, Odisha 751024, India</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center">
                     <small class="far fa-clock text-primary me-2"></small>
@@ -58,7 +58,7 @@
             <div class="col-lg-5 px-5 text-end">
                 <div class="h-100 d-inline-flex align-items-center me-4">
                     <small class="fa fa-phone-alt text-primary me-2"></small>
-                    <small>+91 9692 097 145</small>
+                    <small>+91 91243 18222</small>
                 </div>
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href="https://www.facebook.com/share/1Bg3ibnjHD/?mibextid=wwXIfr"><i class="fab fa-facebook-f"></i></a>
@@ -184,7 +184,7 @@
                     <div class="p-lg-5 ps-lg-0">
                         <h6 class="text-primary">Why Choose Us!</h6>
                         <h1 class="mb-4">Complete Commercial & Residential Solar Systems</h1>
-                        <p class="mb-4 pb-2">At Bhakti Solar Energy, we are committed to harnessing the power of the sun to create a cleaner and more sustainable future. As a government-certified company, we specialize in designing and installing advanced solar solutions tailored to the needs of residential, commercial, and industrial sectors. Our mission is to make renewable energy affordable and accessible, reducing dependency on conventional power sources while promoting environmental responsibility.</p>
+                        <p class="mb-4 pb-2">At Pragati EcoSolar, we are committed to harnessing the power of the sun to create a cleaner and more sustainable future. As a government-certified company, we specialize in designing and installing advanced solar solutions tailored to the needs of residential, commercial, and industrial sectors. Our mission is to make renewable energy affordable and accessible, reducing dependency on conventional power sources while promoting environmental responsibility.</p>
                         <div class="row g-4">
                             <div class="col-6">
                                 <div class="d-flex align-items-center">
@@ -260,7 +260,7 @@
                     </div>
                 </div>
                 <div class="testimonial-text text-center rounded p-4">
-                    <p>"Bhakti Solar Energy provided an excellent solar panel installation for our home. Our electricity bills have reduced significantly, and we are extremely satisfied with the service and professionalism."</p>
+                    <p>"Pragati EcoSolar provided an excellent solar panel installation for our home. Our electricity bills have reduced significantly, and we are extremely satisfied with the service and professionalism."</p>
                     <h5 class="mb-1">Sarat Mohanty</h5>
                     <span class="fst-italic">Homeowner</span>
                 </div>
@@ -273,7 +273,7 @@
                     </div>
                 </div>
                 <div class="testimonial-text text-center rounded p-4">
-                    <p>"The team at Bhakti Solar Energy was very knowledgeable and guided us through every step of our solar installation. Their after-sales support is excellent, and we highly recommend them!"</p>
+                    <p>"The team at Pragati EcoSolar was very knowledgeable and guided us through every step of our solar installation. Their after-sales support is excellent, and we highly recommend them!"</p>
                     <h5 class="mb-1">Suchitra Das</h5>
                     <span class="fst-italic">Business Owner</span>
                 </div>
@@ -286,7 +286,7 @@
                     </div>
                 </div>
                 <div class="testimonial-text text-center rounded p-4">
-                    <p>"Switching to solar energy with Bhakti Solar Energy was one of the best decisions for our factory. The system is efficient, and their team is always available for support. Great experience!"</p>
+                    <p>"Switching to solar energy with Pragati EcoSolar was one of the best decisions for our factory. The system is efficient, and their team is always available for support. Great experience!"</p>
                     <h5 class="mb-1">Debasish Pattnaik</h5>
                     <span class="fst-italic">Factory Owner</span>
                 </div>
@@ -305,8 +305,8 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Address</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Room no-4, Bijupattnaik Commercial Complex, Damana Square, Chandrasekharpur ,Bhubaneswar, Odisha, India - 751016</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 9692 097 1450</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>HIG/42, Aryapalli, Patia, Bhubaneswar, Odisha 751024, India</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 91243 18222</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@bhaktisolarenergy.in</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
@@ -360,7 +360,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">2025
-                        &copy; <a href="#">Bhakti Solar Eneragy</a>, All Right Reserved.
+                        &copy; <a href="#">Pragati EcoSolar</a>, All Right Reserved.
                     </div>
                     <div class="col-md-6 text-center text-md-end">
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
@@ -377,7 +377,7 @@
     <!-- Back to Top -->
      <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
 
-  <a href="https://wa.me/919692097145" target="_blank" class="btn btn-lg btn-primary btn-lg-square rounded-circle whatsapp-icon">
+  <a href="https://wa.me/919124318222" target="_blank" class="btn btn-lg btn-primary btn-lg-square rounded-circle whatsapp-icon">
     <i class="bi bi-whatsapp"></i>
 </a>
 
