--- a/quote.html
+++ b/quote.html
@@ -75,7 +75,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
         <a href="/" class="navbar-brand d-flex align-items-center border-end px-4 px-lg-5">
-            <img class="img-fluid" src="img/Logo.png" alt="" style="width: 50px; height: 50px;">
+            <img class="img-fluid" src="img/Logo.jpg" alt="" style="width: 50px; height: 50px;">
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
