--- a/about.html
+++ b/about.html
@@ -225,10 +225,10 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
-                            <img class="img-fluid w-75" src="img/user2.jpeg" alt="" style="max-height: 300px;">
+                              <img class="img-fluid w-75" src="img/user3.jpeg" alt="" style="max-height: 300px;">
                             <div class="team-social w-25">
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
@@ -236,12 +236,12 @@
                             </div>
                         </div>
                         <div class="p-4">
-                            <h5>Pradeep Kumar Sahoo</h5>
-                            <span>Branch Head</span>
+                             <h5>Kalpna Sahoo</h5>
+                            <span>Sales Head</span>
                         </div>
                     </div>
-                </div> -->
-                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                </div> 
+                 <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
                             <img class="img-fluid w-75" src="img/user3.jpeg" alt="" style="max-height: 300px;">
@@ -256,7 +256,7 @@
                             <span>Sales Head</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
