--- a/about.html
+++ b/about.html
@@ -241,7 +241,7 @@
                         </div>
                     </div>
                 </div> 
-                 <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
                             <img class="img-fluid w-75" src="img/user3.jpeg" alt="" style="max-height: 300px;">
@@ -256,7 +256,7 @@
                             <span>Sales Head</span>
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
