--- a/about.html
+++ b/about.html
@@ -244,7 +244,7 @@
                  <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
-                            <img class="img-fluid w-75" src="img/user3.jpeg" alt="" style="max-height: 300px;">
+                             <img class="img-fluid w-75" src="img/user4.jpeg" alt="" style="max-height: 300px;">
                             <div class="team-social w-25">
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
@@ -252,14 +252,14 @@
                             </div>
                         </div>
                         <div class="p-4">
-                            <h5>Kalpna Sahoo</h5>
-                            <span>Sales Head</span>
+                           <h5>Rasmita Maharana</h5>
+                            <span>Sales Manager</span>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
                             <img class="img-fluid w-75" src="img/user4.jpeg" alt="" style="max-height: 300px;">
@@ -274,7 +274,7 @@
                             <span>Sales Manager</span>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
