--- a/feature.html
+++ b/feature.html
@@ -321,7 +321,7 @@
                     <h5 class="text-white mb-4">Address</h5>
                     <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>HIG/42, Aryapalli, Patia, Bhubaneswar, Odisha 751024, India</p>
                     <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 91243 18222</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@bhaktisolarenergy.in</p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>solarbee.bbsr@gmail.com</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-square btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-outline-light btn-social" href="https://www.facebook.com/share/1Bg3ibnjHD/?mibextid=wwXIfr"><i class="fab fa-facebook-f"></i></a>
