--- a/termsandcondition.html
+++ b/termsandcondition.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="h-100 d-inline-flex align-items-center mx-n2">
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href="https://www.facebook.com/profile.php?id=61576780145404"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href=""><i class="fab fa-linkedin"></i></a>
+                    <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href="https://www.linkedin.com/in/pragati-ecosolar-5a61ba387"><i class="fab fa-linkedin"></i></a>
                     <a class="btn btn-square btn-link rounded-0 border-0 border-end border-secondary" href="https://www.instagram.com/pragati_ecosolar/"><i class="fab fa-instagram"></i></a>
                     
                 </div>
