--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <!-- Carousel Start -->
     <div class="container-fluid p-0 pb-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="owl-carousel header-carousel position-relative">
-            <div class="owl-carousel-item position-relative" data-dot="img/carousel-2.jpg">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/carousel-2.jpg'>">
                 <img class="img-fluid" src="img/carousel-2.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="img/Why-Securitisation-of-Solar-Assets-is-the-Game-Changer-Kenya-Needs-to-Accelerate-the-Green-Movement.jpg">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/Why-Securitisation-of-Solar-Assets-is-the-Game-Changer-Kenya-Needs-to-Accelerate-the-Green-Movement.jpg'>">
                 <img class="img-fluid" src="img/Why-Securitisation-of-Solar-Assets-is-the-Game-Changer-Kenya-Needs-to-Accelerate-the-Green-Movement.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
@@ -143,7 +143,7 @@
                     </div>
                 </div>
             </div>
-            <div class="owl-carousel-item position-relative" data-dot="img/panels-electricity-order-sunlight.jpg">
+            <div class="owl-carousel-item position-relative" data-dot="<img src='img/panels-electricity-order-sunlight.jpg'>'>
                 <img class="img-fluid" src="img/panels-electricity-order-sunlight.jpg" alt="">
                 <div class="owl-carousel-inner">
                     <div class="container">
