--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
                         <h1 class="mb-4">Feel Free To Contact Us</h1>
                        <p class="mb-4">Our contact form is here to assist you! Reach out to Pragati EcoSolar for inquiries about solar solutions, installations, or any support you need. Simply fill out the form, and our team will get back to you promptly.</p>
 
-                        <form action="send-mail.php" method="POST">
+                        <form id="contactForm">
                             <div class="row g-3">
                                 <div class="col-md-6">
                                     <div class="form-floating">
